@@ -1,5 +1,7 @@
 BuildingsPy Changelog
 ---------------------
+- For simulation, corrected a bug that led to an error message when a model from the Modelica Standard Library is simulated
+  (https://github.com/lbl-srg/BuildingsPy/issues/472)
 - For unit tests, enabled option to run tests with OpenModelica.
   This change also allows specifying the test configuration in the more concise
   conf.yml rather than conf.json file.
